Revision history for Acme-6502

0.0.1   2006-12-18
        Initial release.
       
0.0.2   2006-12-18
        Added Class::Std to prereqs

0.0.3   2006-12-18
        Added kludgy OSRDCH support. Forth sort of works now.
        Added OSCALL tracing to Tube.pm

0.0.4   2006-12-19
        Fixed module name in POD for Acme::6502::Tube

0.0.5   2006-12-19
        Replaced hardwired tracing with signals thrown before /
        after OS calls

0.0.6   2007-02-23
        Added machine readable license.

0.70    2007-11-07
        An end to version number madness. I hope.
    
0.71    2007-11-08
        A new dawn in the struggle to free ourselves from the
        shackles of version number oppression.

0.XX    XXXX
        Added a test suite pulled from the monkeynes project
        - patched script_7C.txt to work properly
        Fix PLP to clear B flag instead of setting it
        Fix TSX to set N and Z flag based on the value of X