@@ -772,7 +772,10 @@ sub _bfnz {
 
 sub _jmp_i {
     my $a = shift;
-    return '$pc = $mem[' . $a . '] | ($mem[' . $a . ' + 1] << 8);' . "\n";
+    # this should emulate a page boundary bug:
+    # JMP 0x80FF fetches from 0x80FF and 0x8000 instead of 0x80FF and 0x8100
+    my $b = "($a & 0xff) == 0xff ? ($a & 0xff00) : $a + 1";
+    return '$pc = $mem[' . $a . '] | ($mem[' . $b . ' ] << 8);' . "\n";
 }
 
 sub _jmp {
